--- a/requirements.yml
+++ b/requirements.yml
@@ -3,12 +3,13 @@ functional:
   - Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   - Сайт должен быть протестирован на совместимость с последними версиями браузеров.
+  - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
 non-functional:
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
   - Сайт должен быть безопасным и защищать данные пользователя.
-  - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
 implicit:
   - Сайт должен иметь мобильную версию.
   - Сайт должен быть способен обрабатывать большое количество трафика.
   - Сайт должен быть доступен на различных устройствах.
-  - На русской версии сайта цены должны быть указаны в рублях.
+  - На русской версии сайта описание товаров должно быть на русском языке и цены должны быть указаны в рублях.
+  
