--- a/test-cases.yml
+++ b/test-cases.yml
@@ -11,7 +11,7 @@
    В корзине появляется название товара, колличество, цена.
    
    - summary: |
-    Проверка оформления заказа.
+    Проверка редиректа на страницу регистрации при оформления заказа.
   requirement: |
      Редирект на страницу регистрации пользователя.
   prerequisites: |
