--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,4 +1,15 @@
   - summary: |
+    Проверка возможности искать товары по ключевому слову.
+  requirement: |
+    Список товаров фильтруется по ключевому слову.
+  prerequisites: |
+    Открыта страница с товарами.
+  steps: |
+    - Вводим ключевое слово в форму "Search".
+  expected-result: |
+   На странице остаются только товары соответствующие поисковому запросу.
+  
+  - summary: |
     Проверка добавления товара в корзину.
   requirement: |
     В корзине отображается название товара, колличество, цена.
