--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,34 +1,60 @@
 ---
 - summary: |
-   Проверка добавления товара в корзину.
+    Проверка возможности поиска товара по ключевому слову.
+  status: pass
+  
+- summary: |
+    Проверка фильтрации списка товаров по категории.
+  status: pass
+  
+- summary: |
+    Проверка фильтрации списка товаров по бренду.
+  status: pass
+  
+- summary: |
+    Проверка фильтрации списка товаров по цене.
+  status: pass
+  
+- summary: |
+    Проверка мобильной версии сайта.
+  status: pass
+  
+- summary: |
+    Проверка на совместимость с последней версией браузера Chrome.
+  status: pass
+  
+- summary: |
+    Проверка возможности просматривать подробную информацию о товаре.
+  status: pass
+  
+- summary: |
+    Проверка добавления товара в корзину.
+  status: pass
+  
+- summary: |
+    Проверка возможности просматривать содержимое корзины.
+  status: pass 
+  
+- summary: |
+    Проверка доступности сайта на iPad Mini.
   status: pass
 
 - summary: |
-  Проверка редиректа на страницу регистрации при оформлении заказа.  
+    Проверка редиректа на страницу регистрации при оформлении заказа.  
   status: fail
   
 - summary: |
-  Проверка авторизации пользователя с существующими логином и паролем.
+    Проверка авторизации пользователя с существующими логином и паролем.
   status: fail
 
 - summary: |
-  Проверка входа пользователя с несуществующими логином и паролем.
+    Проверка входа пользователя с несуществующими логином и паролем.
   status: fail
 
 - summary: |
-  Возможность оплаты заказа. 
+    Возможность оплаты заказа. 
   status: fail
 
 - summary: |
-  Подтверждение оплаты заказа.  
+    Подтверждение оплаты заказа.  
   status: fail
-
-- summary: |
-  
-  status: fail
-
-    
-   
-   
-    
-    
