--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,4 +1,4 @@
-  - summary: |
+- summary: |
     Проверка возможности искать товары по ключевому слову.
   requirement: |
     Список товаров фильтруется по ключевому слову.
@@ -9,7 +9,70 @@
   expected-result: |
    На странице остаются только товары соответствующие поисковому запросу.
   
-  - summary: |
+- summary: |
+    Проверка фильтрации списка товаров по категории.
+  requirement: |
+    Список товаров фильтруется по категории.
+  prerequisites: |
+    Открыта страница с товарами.
+  steps: |
+    - Выбираем категорию товара из выпадающего списка.
+  expected-result: |
+    На странице остаются только товары соответствующие категории.
+   
+- summary: |
+    Проверка фильтрации списка товаров по бренду.
+  requirement: |
+    Список товаров фильтруется по бренду.
+  prerequisites: |
+    Открыта страница с товарами.
+  steps: |
+    - Отмечаем чекбокс бренда из списка.
+  expected-result: |
+    На странице остаются только товары соответствующие бренду.
+   
+- summary: |
+    Проверка фильтрации списка товаров по цене.
+  requirement: |
+    Список товаров фильтруется по цене.
+  prerequisites: |
+    Открыта страница с товарами.
+  steps: |
+    - Определяем диапазон цен.
+  expected-result: |
+    На странице остаются только товары соответствующие цене.
+   
+- summary: |
+    Проверка мобильной версии сайта на iPhone 12 Pro
+  requirement: |
+    Сайт работает на iPhone 12 Pro
+  steps: |
+    - Открываем сайт на iPhone 12 Pro
+  expected-result: |
+    Сайт работает на iPhone 12 Pro.
+    
+- summary: |
+    Проверка на совместимость с последней версией браузера Chrome.
+  requirement: |
+    Сайт работает в браузере Chrome Version 109.0.5414.119 (Build ufficiale) (x86_64).
+  steps: |
+    - Открываем сайт в браузере Chrome.
+  expected-result: |
+    Сайт функционален.
+    
+- summary: |
+    Проверка возможности просматривать подробную информацию о товаре.
+  requirement: |
+    Просмотр подробного описания товара и нескольких фотографий.
+  prerequisites: |
+    Открыта страница с товарами.
+  steps: |
+    - Выбираем товар
+    - Клик на изображение товара
+  expected-result: |
+     Появляется крупная фотография товара и его подробное описание.
+    
+- summary: |
     Проверка добавления товара в корзину.
   requirement: |
     В корзине отображается название товара, колличество, цена.
@@ -19,33 +82,33 @@
     - Выбираем товар
     - Нажимаем кнопку "В корзину"
   expected-result: |
-   В корзине появляется название товара, колличество, цена.
+    В корзине появляется название товара, колличество, цена.
    
-   - summary: |
+- summary: |
     Проверка редиректа на страницу регистрации при оформления заказа.
   requirement: |
-     Редирект на страницу регистрации пользователя.
+    Редирект на страницу регистрации пользователя.
   prerequisites: |
     Товар в корзине
   steps: |
     - Нажимаем кнопку "Оформить заказ"
   expected-result: |
-  Убедиться, что произошёл редирект на страницу регистрации пользователя.
+    Убедиться, что произошёл редирект на страницу регистрации пользователя.
   
-  - summary: |
-   Проверка авторизации пользователя с существующими логином и паролем.
+- summary: |
+    Проверка авторизации пользователя с существующими логином и паролем.
   requirement: |
     При верном вводе логине и пароля пользователь должен войти в свой личный кабинет.
   prerequisites:
-   Открыта страница логина.
+    Открыта страница логина.
   steps: |
     - Вводим логин
     - Вводим пароль
     - Нажимаем кнопку "Войти"
   expected-result: |
-   Пользователь должен попасть в личный кабинет
+    Пользователь должен попасть в личный кабинет
   
- - summary: |
+- summary: |
     Проверка входа пользователя с несуществующими логином и паролем
   requirement: |
     При неправильном логине или пароле пользователь должен получить сообщение об ошибке
@@ -60,30 +123,26 @@
   expected-result: |
     Пользователь должен получить сообщение об ошибке
     
-    - summary: |
+- summary: |
     Возможность оплаты заказа.
   requirement: |
-  При корректном заполнении данных кредитной карты проходит оплата заказа.
+    При корректном заполнении данных кредитной карты проходит оплата заказа.
   prerequisites: |
     В личном кабинете пользователя есть форма для оплаты кредитной картой.
   steps:
     - Заполняем форму
     - Нажимаем кнопку "Оплатить"
   expected-result: |
-   Должна пройти оплата заказа.
+    Должна пройти оплата заказа.
    
-   - summary: |
-   Подтверждение оплаты заказа.
+- summary: |
+    Подтверждение оплаты заказа.
   requirement: |
-  После получения оплаты клиенту отсылается письмо с подтверждением оплаты.
+    После получения оплаты клиенту отсылается письмо с подтверждением оплаты.
   prerequisites: |
     В личном кабинете пользователя есть форма для оплаты кредитной картой.
   steps:
     - Заполняем форму
     - Нажимаем кнопку "Оплатить"
   expected-result: |
-   На  e-mail пользователя отсылается письмо с подтверждением оплаты.
-   
-   
-    
-    
+    На  e-mail пользователя отсылается письмо с подтверждением оплаты.
