--- a/testing-report.yml
+++ b/testing-report.yml
@@ -17,7 +17,7 @@
   
 - summary: |
     Проверка мобильной версии сайта.
-  status: pass
+  status: fail
   
 - summary: |
     Проверка на совместимость с последней версией браузера Chrome.
