--- a/bugreports.yml
+++ b/bugreports.yml
@@ -11,3 +11,28 @@
   actual-result: |
     На странице появляется модальное окно с подтверждением заказа без возможности оплаты.
     
+- summary: |
+     В мобильной версии сайта название кнопки "Checkout" выходит за границы кнопки.
+  environment: |
+    Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
+  steps-to-reproduce: |
+    1. Добавить товар в корзину.
+    2. Нажать кнопку "Cart"
+  expected-result: |
+    Кнопка "Checkout" c выровненным по центру названием.
+  actual-result: |
+     Название кнопки "Checkout" выходит за границы кнопки.
+     Ошибка изображена на скриншоте assets/bug.png
+     
+- summary: |
+     В мобильной версии сайта цена выходит за границы рамки.
+  environment: |
+    Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
+  steps-to-reproduce: |
+    1. Добавить товар в корзину.
+    2. Нажать кнопку "Cart"
+  expected-result: |
+   Страница с корзиной c выровненным по центру текстом.
+  actual-result: |
+     Цена выходит за границы правой рамки.
+     Ошибка изображена на скриншоте assets/bug.png
