--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,4 +1,15 @@
 - summary: |
+    На главной странице сайта расположена не функциональная кнопка "Previous"
+  environment: |
+    Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
+  steps-to-reproduce: |
+    1. Открыть страницу с товарами.
+  expected-result: |
+    Кнопка "Next" с возможностью перейти на следующую страницу.
+  actual-result: |
+    На странице расположена не функциональная кнопка "Previous".
+    
+- summary: |
     Не работает оформление заказа с переходом на страницу оплаты
   environment: |
     Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
