--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,13 +1,13 @@
 - summary: |
-    На главной странице сайта расположена не функциональная кнопка "Previous"
+    На главной странице сайта расположена не работающая кнопка "Previous"
   environment: |
     Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
   steps-to-reproduce: |
     1. Открыть страницу с товарами.
   expected-result: |
-    Кнопка "Next" с возможностью перейти на следующую страницу.
+   На первой странице со списком товаров достаточно кнопки "Next" с возможностью перейти на следующую страницу.
   actual-result: |
-    На странице расположена не функциональная кнопка "Previous".
+    На странице расположена не работающая кнопка "Previous".
     
 - summary: |
     Не работает оформление заказа с переходом на страницу оплаты
