--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,9 +1,12 @@
+---
 - summary: |
     Проверка возможности искать товары по ключевому слову.
   requirement: |
     Список товаров фильтруется по ключевому слову.
   prerequisites: |
     Открыта страница с товарами.
+  test-data: |
+    []
   steps: |
     - Вводим ключевое слово в форму "Search".
   expected-result: |
@@ -15,6 +18,8 @@
     Список товаров фильтруется по категории.
   prerequisites: |
     Открыта страница с товарами.
+  test-data: |
+    []
   steps: |
     - Выбираем категорию товара из выпадающего списка.
   expected-result: |
@@ -26,6 +31,8 @@
     Список товаров фильтруется по бренду.
   prerequisites: |
     Открыта страница с товарами.
+  test-data: |
+    []
   steps: |
     - Отмечаем чекбокс бренда из списка.
   expected-result: |
@@ -37,6 +44,8 @@
     Список товаров фильтруется по цене.
   prerequisites: |
     Открыта страница с товарами.
+  test-data: |
+    []
   steps: |
     - Определяем диапазон цен.
   expected-result: |
@@ -46,6 +55,8 @@
     Проверка мобильной версии сайта на iPhone 12 Pro
   requirement: |
     Сайт работает на iPhone 12 Pro
+  test-data: |
+     []
   steps: |
     - Открываем сайт на iPhone 12 Pro
   expected-result: |
@@ -55,6 +66,8 @@
     Проверка на совместимость с последней версией браузера Chrome.
   requirement: |
     Сайт работает в браузере Chrome Version 109.0.5414.119 (Build ufficiale) (x86_64).
+  test-data: |
+    []
   steps: |
     - Открываем сайт в браузере Chrome.
   expected-result: |
@@ -66,6 +79,8 @@
     Просмотр подробного описания товара и нескольких фотографий.
   prerequisites: |
     Открыта страница с товарами.
+  test-data: |
+    []
   steps: |
     - Выбираем товар
     - Клик на изображение товара
@@ -78,6 +93,8 @@
     В корзине отображается название товара, колличество, цена.
   prerequisites: |
     Открыта страница с товарами.
+  test-data: |
+     []
   steps: |
     - Выбираем товар
     - Нажимаем кнопку "В корзину"
@@ -90,6 +107,8 @@
     Редирект на страницу регистрации пользователя.
   prerequisites: |
     Товар в корзине
+  test-data: |
+    []
   steps: |
     - Нажимаем кнопку "Оформить заказ"
   expected-result: |
@@ -101,6 +120,8 @@
     При верном вводе логине и пароля пользователь должен войти в свой личный кабинет.
   prerequisites:
     Открыта страница логина.
+  test-data: |
+    []
   steps: |
     - Вводим логин
     - Вводим пароль
@@ -129,6 +150,8 @@
     При корректном заполнении данных кредитной карты проходит оплата заказа.
   prerequisites: |
     В личном кабинете пользователя есть форма для оплаты кредитной картой.
+  test-data: |
+    []
   steps:
     - Заполняем форму
     - Нажимаем кнопку "Оплатить"
@@ -141,6 +164,8 @@
     После получения оплаты клиенту отсылается письмо с подтверждением оплаты.
   prerequisites: |
     В личном кабинете пользователя есть форма для оплаты кредитной картой.
+  test-data: |
+    []
   steps:
     - Заполняем форму
     - Нажимаем кнопку "Оплатить"
