--- a/test-cases.yml
+++ b/test-cases.yml
@@ -7,7 +7,7 @@
     Открыта страница с товарами.
   test-data: |
     []
-  steps: |
+  steps: 
     - Вводим ключевое слово в форму "Search".
   expected-result: |
    На странице остаются только товары соответствующие поисковому запросу.
@@ -20,7 +20,7 @@
     Открыта страница с товарами.
   test-data: |
     []
-  steps: |
+  steps: 
     - Выбираем категорию товара из выпадающего списка.
   expected-result: |
     На странице остаются только товары соответствующие категории.
@@ -33,7 +33,7 @@
     Открыта страница с товарами.
   test-data: |
     []
-  steps: |
+  steps: 
     - Отмечаем чекбокс бренда из списка.
   expected-result: |
     На странице остаются только товары соответствующие бренду.
@@ -46,7 +46,7 @@
     Открыта страница с товарами.
   test-data: |
     []
-  steps: |
+  steps: 
     - Определяем диапазон цен.
   expected-result: |
     На странице остаются только товары соответствующие цене.
@@ -57,7 +57,7 @@
     Сайт работает на iPhone 12 Pro
   test-data: |
      []
-  steps: |
+  steps: 
     - Открываем сайт на iPhone 12 Pro
   expected-result: |
     Сайт работает на iPhone 12 Pro.
@@ -68,7 +68,7 @@
     Сайт работает в браузере Chrome Version 109.0.5414.119 (Build ufficiale) (x86_64).
   test-data: |
     []
-  steps: |
+  steps: 
     - Открываем сайт в браузере Chrome.
   expected-result: |
     Сайт функционален.
@@ -81,7 +81,7 @@
     Открыта страница с товарами.
   test-data: |
     []
-  steps: |
+  steps: 
     - Выбираем товар
     - Клик на изображение товара
   expected-result: |
@@ -95,7 +95,7 @@
     Открыта страница с товарами.
   test-data: |
      []
-  steps: |
+  steps: 
     - Выбираем товар
     - Нажимаем кнопку "В корзину"
   expected-result: |
@@ -109,7 +109,7 @@
     Товар в корзине
   test-data: |
     []
-  steps: |
+  steps: 
     - Нажимаем кнопку "Оформить заказ"
   expected-result: |
     Убедиться, что произошёл редирект на страницу регистрации пользователя.
@@ -122,7 +122,7 @@
     Открыта страница логина.
   test-data: |
     []
-  steps: |
+  steps: 
     - Вводим логин
     - Вводим пароль
     - Нажимаем кнопку "Войти"
@@ -137,7 +137,7 @@
     Открыта страница логина
   test-data: |
     Логин = hexlet Пароль = badpass
-  steps: |
+  steps: 
     - Вводим логин
     - Вводим пароль
     - Нажимаем кнопку "Войти"
